[project]
name = "hackathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.0.20",
    "folium>=0.20.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-huggingface>=0.3.1",
    "netcdf4>=1.7.2",
    "ollama>=0.5.3",
    "openai>=1.106.1",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.43",
    "streamlit>=1.49.1",
    "streamlit-folium>=0.25.1",
    "transformers>=4.56.1",
    "xarray>=2025.9.0",
]
